--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
                         <div class="divider"></div>
                       </div>
                       <div class="sixteen wide column">
-                        <!-- Intro -->
+                        <h2>Résumé</h2>
+                          <p>&mdash; Hello! I’m a rabbit <strong style="margin-left: 0.0625em;">*</strong> </p>
+                          <p style="opacity: 0.75;">
+                              <strong style="margin-right: 0.0625em;">*</strong>I feel like it's 40-60 by
+                              <a href="https://css-tricks.com/the-great-divide/" rel="external">The Great Divide</a> into JavaScript engineer and UX engineer</p>
                       </div>
                     </div>
                   </div>
