--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div class="divider"></div>
                       </div>
                       <div class="sixteen wide column">
-                        h2>Résumé</h2>
+                        <h2>Résumé</h2>
                         <p>&mdash; Hello! I’m a rabbit <strong style="margin-left: 0.0625em;">*</strong> </p>
                         <p style="opacity: 0.75;">
                        <strong style="margin-right: 0.0625em;">*</strong> But I`m not sure </p>
