--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <h2>Résumé</h2>
                         <p>&mdash; Hello! I’m a rabbit <strong style="margin-left: 0.0625em;">*</strong> </p>
                         <p style="opacity: 0.75;">
-                       <strong style="margin-right: 0.0625em;">*</strong> But I`m not sure </p>
+                       <strong style="margin-right: 0.0625em;">*</strong> or hare.  </p>
                       </div>
                     </div>
                   </div>
@@ -49,8 +49,9 @@
                   <div class="ten wide column">
                     <h3>Experience</h3>
                       <h6>Recent</h6>
-                      <p>Warner Brothers</p>
+                      <p>The Looney Tunes Show, 2011</p>                    
                       <h6>Previous</h6>
+                      <p>"Loonatics Unleashed", 2001</p>
                       <p>"Porky's Hare Hunt"
                         (30 April 1938, as Happy Rabbit)</p>
                       <p>"A Wild Hare"
