--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
                       <h6>Recent</h6>
                       <p>The Looney Tunes Show, 2011</p>                    
                       <h6>Previous</h6>
+                      <p>"Porky's Hare Hunt", 1938</p>
+                      <p>"A Wild Hare", 1940</p>
+                      <p>Buckaroo Bugs, 1944</p>
+                      <p>Bugs Bunny Nips the Nips, 1944</p>
+                      <p>False Hare, 1964</p>                  
+                      <p>Bugs Bunny's Howl-oween Special, 1977</p>
+                      <p>Space Jam, 1996</p>
                       <p>"Loonatics Unleashed", 2001</p>
-                      <p>"Porky's Hare Hunt"
-                        (30 April 1938, as Happy Rabbit)</p>
-                      <p>"A Wild Hare"
-                        (27 July 1940, as Bugs Bunny)</p>
                   </div>
                   <div class="six wide column">
                     <section>
