--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <h2>Résumé</h2>
                         <p>&mdash; Hello! I’m a rabbit <strong style="margin-left: 0.0625em;">*</strong> </p>
                         <p style="opacity: 0.75;">
-                       <strong style="margin-right: 0.0625em;">*</strong> or hare.  </p>
+                       <strong style="margin-right: 0.0625em;">*</strong> or a hare.  </p>
                       </div>
                     </div>
                   </div>
@@ -49,52 +49,55 @@
                   <div class="ten wide column">
                     <h3>Experience</h3>
                       <h6>Recent</h6>
-                      <p>The Looney Tunes Show, 2011</p>                    
+                      <p>"The Looney Tunes Show", 2011</p>                    
                       <h6>Previous</h6>
                       <p>"Porky's Hare Hunt", 1938</p>
                       <p>"A Wild Hare", 1940</p>
-                      <p>Buckaroo Bugs, 1944</p>
-                      <p>Bugs Bunny Nips the Nips, 1944</p>
-                      <p>False Hare, 1964</p>                  
-                      <p>Bugs Bunny's Howl-oween Special, 1977</p>
-                      <p>Space Jam, 1996</p>
+                      <p>"Buckaroo Bugs", 1944</p>
+                      <p>"Bugs Bunny Nips the Nips", 1944</p>
+                      <p>"False Hare", 1964</p>                  
+                      <p>"Bugs Bunny's Howl-oween Special", 1977</p>
+                      <p>"Space Jam", 1996</p>
                       <p>"Loonatics Unleashed", 2001</p>
                   </div>
                   <div class="six wide column">
                     <section>
                       <h3>Languages</h3>
                       <p class="tags small">
-                        <span class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span></p>
+                        <span class="language" lang="en">&#x1f1fa;&#x1f1f8; English</span></p>
                     </section>
                     <section>
                       <h3>Skills</h3>
-                        <p class="tags small">funny 
-                        <span class="nowrap">positive</span> 
-                        active
-                        <span class="nowrap">healthy</span>
-                         early bird</p>
+                        <p class="nowrap">Funny
+                        <span class="nowrap">Positive</span>
+                        <span class="nowrap">Healthy</span>
+                         Early bird</p>
                     </section>
                     <section>
                       <h3>Character</h3>
-                      <p class="tags small">EXPLORER STRAIGHTFORWARD RELAXER CONFIDENT CONSISTENT CHALLENGING</p>
+                      <p class="tags small">Explorer Straightforwarder Confident Consistent Averege Enjoyer Challanging</p>
                     </section>
                     <section>
                       <h3>Wants&#x1f97a;</h3>
-                      <p class="tags small bulleted"><span class="tag">TO BE FIT AND HEALTHY</span><span class="tag">TO OWN MY SCHEDULE</span><span class="tag">TO READ MORE</span><span class="tag">TO OPEN A CAFÉ</span><span class="tag">TO BE BRAVE</span><span class="tag">TO BECOME A SUPERHERO</span><span class="tag">TO LISTEN AND LEARN</span></p>
+                      <p class="tags small bulleted">
+                        <span class="tag">Carrot</span>
+                        <span class="tag">Time to sleep</span>
+                        <span class="tag">More carrot</span>
+                        <span class="tag">50 shades of carrot</span>
+                        <span class="tag">Do you even lift, bro?</span>
+                        <span class="tag">Where`s my carrot, dude? </span>
+                      </p>
                     </section>
                     <section>
                       <h3>Education</h3>
                       <ul class="timeline">
                         <li>
-                          <div><em>Every day</em></div>
+                          <div><em>Youth</em></div>
                           <p class="tags bulleted">
-                            <span class="tag"><a href="https://tinytoons.fandom.com/wiki/Acme_Looniversity" rel="external"><strong>Acme Looniversity</strong></a></span>
-                            <span class="tag"><a href="https://dribbble.com/" rel="external"><strong>Dribbble</strong></a></span>
-                            <span class="tag"><a href="https://goodui.org/" rel="external"><strong>GoodUI</strong></a></span>
-                            <span class="tag"><a href="https://egghead.io/" rel="external"><strong>egghead.io</strong></a></span>
-                            <span class="tag"><a href="https://theverge.com/" rel="external"><strong>The Verge</strong></a></span>
-                            <span class="tag"><a href="https://uncrate.com/" rel="external"><strong>Uncrate</strong></a></span>
-                          </p>
+                            <span class="tag"><a href="https://tinytoons.fandom.com/wiki/Acme_Looniversity" rel="external"><strong>Acme Looniversity</strong>
+                            </a>
+                          </span>
+                        </p>
                         </li>
                         <li>
                           <div><em>December 2005 &ndash; April 2006</em></div>
