--- a/index.html
+++ b/index.html
@@ -100,20 +100,16 @@
                         </p>
                         </li>
                         <li>
-                          <div><em>December 2005 &ndash; April 2006</em></div>
-                          <div><strong>Certificates of CCNA Course Completion</strong> at <a href="https://www.netacad.com/" rel="external"><strong>Cisco Networking Academy Program</strong></a></div>
+                          <div><em>December 1940 &ndash; April 1947</em></div>
+                          <div><strong>Cal Dalton</strong> at <a href="https://looneytunes.fandom.com/wiki/Cal_Dalton" rel="external"></a></div>
                         </li>
                         <li>
                           <div><em>1<sup>st</sup> September 2003 &ndash; 30<sup>th</sup> June 2008</em></div>
-                          <div><strong>Bachelor's degree</strong> in <strong>computer science</strong> at <a href="http://tntu.edu.ua//?p=en/home" rel="external"><strong>Ternopil National Technical University</strong></a></div>
+                          <div><strong>Chuck Jones</strong> at <a href="https://looneytunes.fandom.com/wiki/Chuck_Jones" rel="external"></a></div>
                         </li>
                         <li>
-                          <div><em>1<sup>st</sup> October 1995 &ndash; 23<sup>rd</sup> May 1999</em></div>
-                          <div><strong>Certificate of graduation</strong> at <strong>Ternopil Art School for Children</strong></div>
-                        </li>
-                        <li>
-                          <div><em>1<sup>st</sup> September 1993 &ndash; 21<sup>st</sup> June 2003</em></div>
-                          <div><strong>Certificate of graduation</strong> at <strong>№20 Middle School of General Education</strong></div>
+                          <div><em>1<sup>st</sup> September 2003 &ndash; 30<sup>th</sup> June 2008</em></div>
+                          <div><strong>Tex Avery</strong> at <a href="https://looneytunes.fandom.com/wiki/Tex_Avery" rel="external"></a></div>
                         </li>
                       </ul>
                     </section>
