--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
               <div class="stackable grid">
                 <div class="row">
                   <div class="three wide center aligned column">
-                    <!-- Avatar -->
+                    <div class="avatar-wrapper">
+                      <object class="avatar" data="avatar.svg" role="img" aria-label="My profile picture"></object>
+                    </div>
                   </div>
                   <div class="thirteen wide column">
                     <div class="stackable grid">
@@ -100,16 +102,17 @@
                         </p>
                         </li>
                         <li>
-                          <div><em>December 1940 &ndash; April 1947</em></div>
-                          <div><strong>Cal Dalton</strong> at <a href="https://looneytunes.fandom.com/wiki/Cal_Dalton" rel="external"></a></div>
+                          <div><em>Mentors</em></div>
+                          <div><em>December 1938 &ndash; April 1940</em></div>
+                          <div><strong>The First One</strong><a href="https://looneytunes.fandom.com/wiki/Cal_Dalton" rel="external"><strong>Cal Dalton</strong></a></div>
                         </li>
                         <li>
-                          <div><em>1<sup>st</sup> September 2003 &ndash; 30<sup>th</sup> June 2008</em></div>
-                          <div><strong>Chuck Jones</strong> at <a href="https://looneytunes.fandom.com/wiki/Chuck_Jones" rel="external"></a></div>
+                          <div><em>1<sup>st</sup> September 1940 &ndash; 30<sup>th</sup> June 1944</em></div>
+                          <div><strong>Cheaf</strong><a href="https://looneytunes.fandom.com/wiki/Chuck_Jones" rel="external"><strong>Chuck Jones</strong></a></div>
                         </li>
                         <li>
-                          <div><em>1<sup>st</sup> September 2003 &ndash; 30<sup>th</sup> June 2008</em></div>
-                          <div><strong>Tex Avery</strong> at <a href="https://looneytunes.fandom.com/wiki/Tex_Avery" rel="external"></a></div>
+                          <div><em>1<sup>st</sup> September 1945 &ndash; 30<sup>th</sup> June 1955</em></div>
+                          <div><strong>Favorite</strong><a href="https://looneytunes.fandom.com/wiki/Tex_Avery" rel="external"><strong>Tex Avery</strong></a></div>
                         </li>
                       </ul>
                     </section>
