--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="row">
                   <div class="three wide center aligned column">
                     <div class="avatar-wrapper">
-                      <object class="avatar" data="avatar.svg" role="img" aria-label="My profile picture"></object>
+                      <object class="avatar" data="avatar.svg" width="300" height="300" role="img" aria-label="My profile picture"></object>
                     </div>
                   </div>
                   <div class="thirteen wide column">
@@ -104,15 +104,15 @@
                         <li>
                           <div><em>Mentors</em></div>
                           <div><em>December 1938 &ndash; April 1940</em></div>
-                          <div><strong>The First One</strong><a href="https://looneytunes.fandom.com/wiki/Cal_Dalton" rel="external"><strong>Cal Dalton</strong></a></div>
+                          <div><strong>The First One </strong> <a href="https://looneytunes.fandom.com/wiki/Cal_Dalton" rel="external"><strong>Cal Dalton</strong></a></div>
                         </li>
                         <li>
                           <div><em>1<sup>st</sup> September 1940 &ndash; 30<sup>th</sup> June 1944</em></div>
-                          <div><strong>Cheaf</strong><a href="https://looneytunes.fandom.com/wiki/Chuck_Jones" rel="external"><strong>Chuck Jones</strong></a></div>
+                          <div><strong>Cheaf </strong> <a href="https://looneytunes.fandom.com/wiki/Chuck_Jones" rel="external"><strong>Chuck Jones</strong></a></div>
                         </li>
                         <li>
                           <div><em>1<sup>st</sup> September 1945 &ndash; 30<sup>th</sup> June 1955</em></div>
-                          <div><strong>Favorite</strong><a href="https://looneytunes.fandom.com/wiki/Tex_Avery" rel="external"><strong>Tex Avery</strong></a></div>
+                          <div><strong>Favorite </strong> <a href="https://looneytunes.fandom.com/wiki/Tex_Avery" rel="external"><strong>Tex Avery</strong></a></div>
                         </li>
                       </ul>
                     </section>
