--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                   <div class="six wide column">
                     <section>
                       <h3>Languages</h3>
-                      <p class="tags small">
-                        <span class="language" lang="en">&#x1f1fa;&#x1f1f8; English</span></p>
+                      <p class="Languages">
+                        <span>English</span></p>
                     </section>
                     <section>
                       <h3>Skills</h3>
